fix: pagination jump use input-number

--- a/style/web/components/pagination/_index.less
+++ b/style/web/components/pagination/_index.less
@@ -167,7 +167,7 @@
     font-size: @pagination-font-default;
   }
 
-  .@{prefix}-input {
+  .@{prefix}-input-number {
     margin-left: @pagination-input-margin;
     margin-right: @pagination-input-margin;
     height: @pagination-height-default;
